--- a/WorldOfWool/MainPage.xaml
+++ b/WorldOfWool/MainPage.xaml
@@ -8,11 +8,14 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Margin="0,0,-472,10">
-        <Image x:Name="imgSheep" Source="Images/imgSheep.jpg" Height="737" Margin="230,-209,0,102" HorizontalAlignment="Left" Width="327"/>
+        <Image Name="imgSheep" Source="Images/imgSheep.jpg" Height="737" Margin="230,-209,0,102" HorizontalAlignment="Left" Width="327"/>
+        <TextBlock Name="txtbHappiness" Margin="-550,392.687,0,0" Height="100" Width="150"/>
+        <Button x:Name="btnLove" Content="Gimmie Love!" HorizontalAlignment="Left" Margin="100,392.687,0,0" VerticalAlignment="Top" Click="btnLove_click"/>
         <Button x:Name="btnPlay" Content="btnPlay" HorizontalAlignment="Left" Margin="339,392.687,0,0" VerticalAlignment="Top" Click="btnPlay_click" Height="69" Width="183.345" RenderTransformOrigin="0.5,0.5" UseLayoutRounding="False" d:LayoutRounding="Auto">
             <Button.RenderTransform>
                 <CompositeTransform Rotation="-0.085"/>
             </Button.RenderTransform>
         </Button>
+
     </Grid>
 </Page>
