Added files via upload
Added a timer to the play page.

--- a/Play.xaml
+++ b/Play.xaml
@@ -5,7 +5,7 @@
     xmlns:local="using:WorldOfWool"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d" Loaded="Page_Loaded">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Margin="-168,-88,-652,10" RenderTransformOrigin="0.984,0.725">
         <Button x:Name="btnBack" Content="Back" HorizontalAlignment="Left" Margin="231,601,0,0" VerticalAlignment="Top" Height="50" Width="98" Click="btnBack_click" RenderTransformOrigin="1.612,-1.239"/>
@@ -13,5 +13,6 @@
         <Image x:Name="imgMiniSheep"  Source="ImagesPlay/imgMiniSheep.jpg" HorizontalAlignment="Left" Height="356" VerticalAlignment="Top" Width="100" Margin="211,171,0,0" d:IsLocked="True"/>
         <Image x:Name="imgMiniSleep"  Source="ImagesPlay/imgMiniSleep.jpg" HorizontalAlignment="Left" Height="356" VerticalAlignment="Top" Width="100" Margin="290,190,0,0" d:IsLocked="True"/>
         <Image x:Name="imgMiniTapped"  Source="ImagesPlay/imgMiniTapped.jpg" HorizontalAlignment="Left" Height="356" VerticalAlignment="Top" Width="100" Margin="400,200,0,0" d:IsLocked="True"/>
+        <TextBlock x:Name="txtbTimer" Margin="739,346,24,272"  Text=""/>
     </Grid>
 </Page>
