--- a/WorldOfWool/Play.xaml
+++ b/WorldOfWool/Play.xaml
@@ -8,15 +8,6 @@
     mc:Ignorable="d" Loaded="Page_Loaded">
 
     <Page.Resources>
-
-
-        <!--<Storyboard x:Name="sbBtnDown" RepeatBehavior="Forever">
-            <DoubleAnimation Duration="0:0:0.1" To="37.333" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" Storyboard.TargetName="imgTapped" d:IsOptimized="True"/>
-
-        </Storyboard>
-        <Storyboard x:Name="sbBtnUp" RepeatBehavior="Forever">
-            <DoubleAnimation Duration="0:0:0.1" To="-42.667" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" Storyboard.TargetName="imgTapped" d:IsOptimized="True"/>
-        </Storyboard> -->
         <Storyboard x:Name="sbBtnRight" AutoReverse="False">
             <DoubleAnimation Duration="0:0:0.1" To="141.333" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateX)" Storyboard.TargetName="imgTapped" d:IsOptimized="True"/>
 
@@ -25,19 +16,23 @@
             <DoubleAnimation Duration="0:0:0.1" To="-141.333" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateX)" Storyboard.TargetName="imgTapped" d:IsOptimized="True"/>
         </Storyboard>
 
-       <Storyboard x:Name="sbBtnCentre">
-        <DoubleAnimation Duration="0:0:0.1" To="0" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateX)" Storyboard.TargetName="imgTapped" d:IsOptimised="True"/>
+        <Storyboard x:Name="sbBtnCentre">
+            <DoubleAnimation Duration="0:0:0.1" To="0" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateX)" Storyboard.TargetName="imgTapped" d:IsOptimised="True"/>
+        </Storyboard>
+        <Storyboard x:Name="sbGrass"  RepeatBehavior="2x">
+            <DoubleAnimation Duration="0:0:0.7" To="-16" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateX)" Storyboard.TargetName="GrassTuft" d:IsOptimized="True"/>
+            <DoubleAnimation Duration="0:0:0.7" To="792" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" Storyboard.TargetName="GrassTuft" d:IsOptimized="True"/>
         </Storyboard>
     </Page.Resources>
 
     <Grid Margin="-168,-88,-652,10" RenderTransformOrigin="0.984,0.725">
         <!-- Back Button, Instructions Button-->
-        <Button x:Name="btnBack" Content="Back" HorizontalAlignment="Left" Margin="169,625,0,0" VerticalAlignment="Top" Height="39" Width="98" Click="btnBack_click" RenderTransformOrigin="1.612,-1.239"/>
-        <Button x:Name="btnInstructions" Content="Instructions" HorizontalAlignment="Left" Margin="418,631,0,0" VerticalAlignment="Top" Height="37" Width="98" Click="btnInstructions_Click" RenderTransformOrigin="1.612,-1.239"/>
+        <Button x:Name="btnBack" x:Uid="uidBtnBack" HorizontalAlignment="Left" Margin="169,625,0,0" VerticalAlignment="Top" Height="39" Width="98" Click="btnBack_click" RenderTransformOrigin="1.612,-1.239"/>
+        <Button x:Name="btnInstructions" x:Uid="uidBtnInstructions" HorizontalAlignment="Left" Margin="418,631,0,0" VerticalAlignment="Top" Height="37" Width="98" Click="btnInstructions_Click" RenderTransformOrigin="1.612,-1.239"/>
         <!-- Left, Right, Up and Down buttons-->
-        <Button x:Name="btnLeft" Content="Left" HorizontalAlignment="Left" Margin="203,580,0,0" VerticalAlignment="Top" Height="34" Width="59" RenderTransformOrigin="1.612,-1.239" Background="#33EE40BE" BorderBrush="#FF39498F" Click="btnLeft_Click"/>
-        <Button x:Name="btnRight" Content="Right" HorizontalAlignment="Left" Margin="445,580,0,0" VerticalAlignment="Top" Height="34" Width="59" RenderTransformOrigin="1.612,-1.239" Background="#33EE40BE" BorderBrush="#FF39498F" Click="btnRight_Click"/>
-        <Button x:Name="btnCentre" Content="Centre" HorizontalAlignment="Left" Margin="322,580,0,0" VerticalAlignment="Top" Height="34" Width="61" RenderTransformOrigin="1.612,-1.239" Background="#33F70BB6" BorderBrush="#FF39498F" Click="btnCentre_Click"/>
+        <Button x:Name="btnLeft" x:Uid="uidBtnLeft" HorizontalAlignment="Left" Margin="196,580,0,0" VerticalAlignment="Top" Height="34" Width="84" RenderTransformOrigin="1.612,-1.239" Background="#33EE40BE" BorderBrush="#FF39498F" Click="btnLeft_Click"/>
+        <Button x:Name="btnRight" x:Uid="uidBtnRight" HorizontalAlignment="Left" Margin="436,580,0,0" VerticalAlignment="Top" Height="34" Width="80" RenderTransformOrigin="1.612,-1.239" Background="#33EE40BE" BorderBrush="#FF39498F" Click="btnRight_Click"/>
+        <Button x:Name="btnCentre" x:Uid="uidBtnCentre" HorizontalAlignment="Left" Margin="315,580,0,0" VerticalAlignment="Top" Height="34" Width="71" RenderTransformOrigin="1.612,-1.239" Background="#33F70BB6" BorderBrush="#FF39498F" Click="btnCentre_Click"/>
         <!-- <Button x:Name="btnDown" Content="Down" HorizontalAlignment="Left" Margin="202,583,0,0" VerticalAlignment="Top" Height="34" Width="61" RenderTransformOrigin="1.612,-1.239" BorderBrush="#FF39498F" Background="#33EE40BE" Click="btnDown_Click"/> -->
         <!-- Images-->
         <Image x:Name="imgTapped"  Source="Images/imgTapped.jpg" HorizontalAlignment="Left" Height="96" VerticalAlignment="Top" Width="86" Margin="308,475,0,0" RenderTransformOrigin="0.5,0.5" >
@@ -45,7 +40,13 @@
                 <CompositeTransform/>
             </Image.RenderTransform>
         </Image>
+        <Image x:Name="GrassTuft"  Source="Images/GrassTuft.png" HorizontalAlignment="Left" Height="51" VerticalAlignment="Top" Width="26" Margin="322,10,0,0" RenderTransformOrigin="0.5,0.5" d:LayoutOverrides="VerticalAlignment" >
+            <Image.RenderTransform>
+                <CompositeTransform/>
+            </Image.RenderTransform>
+        </Image>
+
         <!-- Timer TextBlock -->
-        <TextBlock x:Name="txtbTimer" Margin="739,346,24,272"  Text=""/>
+        <TextBlock x:Name="txtbTimer" Margin="203,254,918,0"  Text="" Height="55" VerticalAlignment="Top"/>
     </Grid>
 </Page>
